# rsync

./: CLAUDE_DESIGN_SYSTEM.md  DEVELOPMENT_GUIDELINES.md  FRAMEWORK_COMPARISON.md  RSYNC_ALGORITHM_RESEARCH.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
rsync-app/src/stores/: settingsStore.ts
rsync-app/src/types/: index.ts
scripts/: generate-macos-icon.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  file_ops.rs  launch_agent.rs  lib.rs  main.rs  permissions.rs  power.rs  sync_engine.rs  transfer_state.rs  tray.rs  volume_watcher.rs
src/components/: ErrorBoundary.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/notifications/: NotificationCenter.tsx
src/components/settings/: LanguageSelector.tsx  NotificationSettings.tsx  PermissionsPanel.tsx  ScheduleManager.tsx  SettingsPanel.tsx  ThemeSelector.tsx
src/components/sync/: ConflictDialog.tsx  DropZone.tsx  ErrorBanner.tsx  ExcludePatterns.tsx  FileList.tsx  HistoryPanel.tsx  InsufficientSpaceModal.tsx  OutputSelector.tsx  ProfileSelector.tsx  ResumeTransferPanel.tsx  ShutdownCountdownModal.tsx  SourceMissingModal.tsx  SyncOptions.tsx  TransferProgress.tsx  TransferQueue.tsx  VerificationErrorModal.tsx
src/components/ui/: Button.tsx  Card.tsx  Dropdown.tsx  Input.tsx  Modal.tsx  ProgressBar.tsx  Select.tsx  Toggle.tsx  Tooltip.tsx  index.ts
src/hooks/: useDragDrop.ts  useScheduleRunner.ts  useSync.ts  useTheme.ts  useTransferState.ts  useTray.ts  useVolumeWatcher.ts
src/i18n/: index.ts
src/stores/: historyStore.ts  notificationStore.ts  profilesStore.ts  scheduleStore.ts  settingsStore.ts  syncStore.ts
src/styles/: tailwind.css
src/types/: index.ts
src/utils/: logger.ts  notifications.ts  tauriCommands.ts
(+3 files in other folders)
