[package]
name = "rsync"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rsync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["fs", "sync", "rt-multi-thread", "macros", "time"] }

# Fast hashing for integrity verification
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Directory traversal
walkdir = "2"

# Timestamps and datetime handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for transfer IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Fast synchronization primitives
parking_lot = "0.12"

# Error handling
thiserror = "1"

# Directories for app data paths
dirs = "5"

# File time manipulation
filetime = "0.2"

# Futures utilities for parallel processing
futures = "0.3"
globset = "0.4.18"

# Volume/drive monitoring
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }
sysinfo = { version = "0.32", default-features = false, features = ["disk"] }

# Unix libc bindings for low-level OS operations
[target.'cfg(unix)'.dependencies]
libc = "0.2"

